<resources>
    <string name="app_name">portfolio14</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_string">Add</string>
    <string name="update_string">Update</string>
    <string name="delete_string">Delete</string>
    <string name="new_string">Start New</string>
    <string name="insert_title">Add a Toy to the Store</string>
    <string name="insert_name_label">Toy Name:</string>
    <string name="name_hint_string">Enter the Toy Name here</string>
    <string name="insert_quantity_label">Quantity:</string>
    <string name="quantity_hint_string">Enter the Quantity in Stock here</string>
    <string name="insert_price_label">Price:</string>
    <string name="price_hint_string">Enter the Price here</string>
    <string name="insert_button_label">Add Toy</string>
    <string name="back_button_label">Go Back</string>
    <string name="initial_database_string">The Database is Empty</string>
</resources>