<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.niu.cs.adam.portfolio14.MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="90"
        android:title="@string/update_string"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="80"
        android:title="@string/delete_string"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="70"
        android:title="@string/new_string"
        app:showAsAction="always" />
</menu>